category based query added
